with-istio/greeting/https/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: greeting #-api
  labels:
    istio-injection: enabled
