with-istio/greeting/https/5-istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: greeting
  name: greeting-virtual-service  
spec:
  hosts:
    - 'morsley.uk'
  gateways:
    - istio-gateway
  http:
    - route:
        - destination:
            host: greeting.greeting.svc.cluster.local
            port:
              number: 443
